--- a/Artifacts.html
+++ b/Artifacts.html
@@ -6,7 +6,6 @@
 
 <link rel="stylesheet" href="styles.css" />
 
-
 </head>
 
 <body>
@@ -16,10 +15,11 @@
  <h2> Artifacts </h2>
 </div>
 
-<ul>
-    <li><a href="Artifacts/Information Policy & Technology in the News.docx" download>Information Policy </a></li>
-</ul>
-
+<div>
+    <ul>
+        <li><a href="Artifacts/Information_Policy_Technology_in_the_News.docx" download="Information_Policy_Technology_in_the_News.docx">Information Policy</a></li>
+    </ul>
+</div>
 
 </body>
 </html>
