--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,7 @@ table{
 	</tr>
 	<tr>
 		<td><img src="Images/interestsicon.png" width="30"></img> </td>
-		<td><a href="interests.html" target="rightside" > Interests </a> </td>
+		<td><a href="Artifacts.html" target="rightside" > Interests </a> </td>
 	</tr>
 </table>
 </div>
