--- a/Artifacts.html
+++ b/Artifacts.html
@@ -15,11 +15,7 @@
  <h2> Artifacts </h2>
 </div>
 
-<div>
-    <ul>
-        <li><a href="Artifacts/Information_Policy_Technology_in_the_News.docx" download="Information_Policy_Technology_in_the_News.docx">Information Policy</a></li>
-    </ul>
-</div>
+<a href="Artifacts/Information_Policy_Technology_in_the_News.docx" download>Information Policy</a>
 
 </body>
 </html>
