--- a/Artifacts.html
+++ b/Artifacts.html
@@ -12,10 +12,10 @@
 
 
 <div class="pagetitle">
- <h2> Artifacts </h2>
+ <h2> Artifacts <a href="Artifacts/Information_Policy_Technology_in_the_News.docx" download>Information Policy</a>
+ </h2>
 </div>
 
-<a href="Artifacts/Information_Policy_Technology_in_the_News.docx" download>Information Policy</a>
 
 </body>
 </html>
