--- a/Artifacts.html
+++ b/Artifacts.html
@@ -64,11 +64,11 @@
     <h2> Information Architecture </h2> 
     <p> Showcase of practices in user-centered design, organization, and maintenance of information systems with a focus on web sites. Processes explored include evaluation of user needs with user personas, and design parameters set in wireframes.</p>
     <ul>
-        <li> <a href="Artifacts/User Personas.pdf" download>Information Policy</a> </li>
-        <li> <a href="Artifacts/User Scenarios.docx" download>Event Report 1</a> </li>
-        <li>  <a href="Artifacts/Low-Fidelity Wireframes.docx" download>Event Report 2</a> </li>
-        <li> <a href="Artifacts/High-fidelity Wireframes.docx" download>Ethical Case Study Analysis</a></li>
-        <li> <a href="Artifacts/Semester Project_ Final Presentation.pptx" download>Enhanced Biography</a></li> <li> <a href="Artifacts/BSIS Program Review Part II.docx" download>BSIS Review Part II</a></li>
+        <li> <a href="Artifacts/User Personas.pdf" download>User Personas</a> </li>
+        <li> <a href="Artifacts/User Scenarios.docx" download>User Scenarios</a> </li>
+        <li>  <a href="Artifacts/Low-Fidelity Wireframes.docx" download>Low-Fidelity Wireframes</a> </li>
+        <li> <a href="Artifacts/High-fidelity Wireframes.docx" download>High-Fidelity Wireframes</a></li>
+        <li> <a href="Artifacts/Semester Project_ Final Presentation.pptx" download>Final Presentation</a></li>
     </ul>
     </div>
   
