--- a/home.html
+++ b/home.html
@@ -45,14 +45,14 @@
     </div>
 
     <div class="summary">
-    <p> Hello, I'm Jacqueline Rios. I'm a proud University of South Florida student on track to become an awesome web developer! My goal is to help your dreams flourish online in your desired website. With my experience in web design and user experience, I strive to encapsulate the content you desire into an enjoyable site so you can share the reverie with your users!  </p>
+    <p> Thank you for considering me to bring your dreams to life online! My goal is to help stakeholders’ dreams flourish online on their ideal website. With my experience and comprehensive skill set in web design, I strive to encapsulate the content desired into an enjoyable site so they can share the reverie with their users! </p>
     </div>
 
 
     
 
     <div class="fixedbox">
-        <h3>Check us out </h3>
+        <h3>Find us at </h3>
         <table>
             <th> <pre>    </pre></th>
             <th> <pre>        </pre> </th>
@@ -65,8 +65,8 @@
                 <td> <pre>    </pre> </td>
             </tr>
             <tr>
-                <td><a href="https://twitter.com/JaCqUeLiNeRoCkS" target="_blank"><img src="Images/twitter.png" height="30"></img></a></td>
-                <td> <a href="https://twitter.com/JaCqUeLiNeRoCkS" target="_blank"> Twitter</a> </td>
+                <td><a href="https://twitter.com/JackieLIS4380" target="_blank"><img src="Images/twitter.png" height="30"></img></a></td>
+                <td> <a href="https://twitter.com/JackieLIS4380" target="_blank"> Twitter</a> </td>
             </tr>
             <tr>
                 <td><pre>    </pre></img> </td>
