--- a/menu.html
+++ b/menu.html
@@ -76,16 +76,16 @@ table{
 		<td> <pre>    </pre> </td>
 	</tr>
 	<tr>
-		<td><a href="contact.html" target="rightside" ><img src="Images/contacticon.png" width="30"></img></a></td>
-		<td><a href="contact.html" target="rightside" > Contact </a> </td>
+		<td><img src="Images/Development.png" width="30"></img> </td>
+		<td><a href="Artifacts.html" target="rightside" > Artifacts </a> </td>
 	</tr>
 	<tr>
 		<td><pre>    </pre></img> </td>
 		<td> <pre>    </pre> </td>
 	</tr>
 	<tr>
-		<td><img src="Images/interestsicon.png" width="30"></img> </td>
-		<td><a href="Artifacts.html" target="rightside" > Interests </a> </td>
+		<td><a href="contact.html" target="rightside" ><img src="Images/contacticon.png" width="30"></img></a></td>
+		<td><a href="contact.html" target="rightside" > Contact </a> </td>
 	</tr>
 </table>
 </div>
