--- a/Resume.html
+++ b/Resume.html
@@ -55,8 +55,8 @@
     
     <a id="objective"></a>
     <h2> Objective </h2>
-    <p> The objective of my career is to get really invested and enjoy a web development career.
-    <br> I also really want to <b><i> enjoy </i></b> life. </p>
+    <p>     <p> My goal is to help stakeholders’ dreams flourish online on their ideal website. With my experience and comprehensive skill set in web design, I strive to encapsulate the content desired into an enjoyable site so they can share the reverie with their users!
+    </p>
 
     <a id="education"></a>
     <h2> Education </h2>
@@ -82,11 +82,19 @@
     <dt><b> Spanish </b></dt>
     <dd> Native and fluent spanish speaker </dd>
 
-    <dt><b> Debugging Software </b></dt>
-    <dd> Ensuring high quality well written software </dd>
 
-    <dt><b> Java </b></dt>
-    <dd> 2 courses in java as well as 1 year personal experience </dd>
+    <dt><b> Programming Skills </b></dt>
+    <dd> Profiency in HTML, CSS, JavaScript for front-end development </dd>
+    <dd> Familiarity in Python, Java, and SQL for expansive role to back-end development. </dd>
+
+    <dt><b> Debugging Software </b></dt>
+    <dd> Profiency in identifying and fixing errors in code ensuring optimal web page functionality and quality. </dd>
+    <dd> Proficieny in troubleshooting for seamless operations of code and website hosting.  </dd>
+
+    <dt><b> Collaboration </b></dt>
+    <dd> Effective communication and collaboration skills culminated from course work emphasizing ability to work with clients, users, and peers. </dd>
+    <dd> Experience in managing projects and ensuring streamlined collaboration from clients and peers. </dd>
+    <dd> Customer service skills acquired from previous job experiences, transferable to client interactions and stakeholder management. </dd>
 
     </dl>
 
