--- a/Artifacts.html
+++ b/Artifacts.html
@@ -64,7 +64,7 @@
     <h2> Information Architecture </h2> 
     <p> Showcase of practices in user-centered design, organization, and maintenance of information systems with a focus on web sites. Processes explored include evaluation of user needs with user personas, and design parameters set in wireframes.</p>
     <ul>
-        <li> <a href="Artifacts/User Personas.pdf" download>User Personas</a> </li>
+        <li> <a href="Artifacts/User Personas.docx" download>User Personas</a> </li>
         <li> <a href="Artifacts/User Scenarios.docx" download>User Scenarios</a> </li>
         <li>  <a href="Artifacts/Low-Fidelity Wireframes.docx" download>Low-Fidelity Wireframes</a> </li>
         <li> <a href="Artifacts/High-fidelity Wireframes.docx" download>High-Fidelity Wireframes</a></li>
